# mish-mesh

./: Cargo.toml
src/: lib.rs  merge_by_distance.rs  mesh.rs  mesh_builder.rs  pieces.rs  tri.rs  vertex.rs
src/pieces/: iter.rs
src/ply/: mod.rs  properties.rs
