[package]
name = "mish-mesh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.202", features = ["derive"]}
ear-algae = {git = "https://github.com/Quelfth/ear-algae"}
index-from-end = "1.0.0"
rayon = "1.10.0"
plyers = {git = "https://github.com/Quelfth/plyers"}
by_address = "1.2.1"
bimap = "0.6.3"
kiddo = "4.2.1"
