[package]
name = "mish-mesh"
version = "0.2.0"
edition = "2024"

[dependencies]
serde = {version = "1.0.202", features = ["derive"]}
ear-algae = {version = "0.5.1", features = ["serde"]}
index-from-end = "1.0.0"
rayon = "1.10.0"
plyers = {git = "https://github.com/Quelfth/plyers"}
by_address = "1.2.1"
bimap = "0.6.3"
kiddo = "4.2.1"
